--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,3 +1,56 @@
+.header .navbar {
+  display: block !important;
+  z-index: 997;
+  position: absolute;
+  padding: 30px 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: transparent !important;
+}
+.header .navbar #navbarNav {
+  color: black !important;
+  font-size: 1.2rem;
+  position: relative;
+  margin-left: 20rem;
+  border: 1.5px;
+}
+.header .navbar #navbarNav:hover {
+  font-size: 1.4rem;
+  transition: 0.5s;
+}
 
+.mainContent {
+  margin-top: 40px;
+  text-align: center;
+  font-size: 20px;
+}
+
+.carouselFondo {
+  height: 720px;
+  width: 1024px;
+}
+
+.muestraProductos {
+  margin-top: 5em;
+}
+
+.card-img-top {
+  height: 260px;
+  width: 286px;
+}
+
+.card {
+  height: 500px;
+  width: 300px;
+  margin-left: 180px !important;
+  margin-bottom: 15px;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 /*# sourceMappingURL=estilo.css.map */
