--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,6 +1,26 @@
-header {
-    background-color: grey;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+
+.header .navbar {
+    display: block !important;
+    z-index: 997;
+    position: absolute;
+    padding: 30px 0;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: transparent !important;
+
+    #navbarNav {
+        color: black !important;
+        font-size: 1.2rem;
+        position: relative;
+        margin-left: 20rem;
+        border: 1.5px;
+        &:hover {
+            font-size: 1.4rem;
+            transition: 0.5s;
+            
+        
+
+        }
+    }
 }
