--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -1,3 +1,11 @@
 @import "footer.scss";
 @import "header.scss";
 @import "mainContent.scss";
+@import "carousel.scss";
+@import "mainProductos.scss";
+
+body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
