modifique el footer

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,3 +1,16 @@
+.footerLinks {
+  background-color: rgba(1, 0, 15, 0.692);
+}
+.footerLinks ul {
+  list-style-type: none;
+  text-decoration: none;
+  text-decoration-style: none;
+  text-decoration-line: none;
+  text-decoration-color: whitesmoke;
+  margin: 0;
+  padding: 0;
+}
+
 .header .navbar {
   display: block !important;
   z-index: 997;
