--- a/css/estilo.css
+++ b/css/estilo.css
@@ -6,7 +6,6 @@
   text-decoration: none;
   text-decoration-style: none;
   text-decoration-line: none;
-  text-decoration-color: whitesmoke;
   margin: 0;
   padding: 0;
 }
@@ -23,13 +22,13 @@
 }
 .header .navbar #navbarNav {
   color: black !important;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   position: relative;
-  margin-left: 20rem;
+  margin-left: 16rem;
   border: 1.5px;
 }
 .header .navbar #navbarNav:hover {
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   transition: 0.5s;
 }
 
@@ -56,8 +55,26 @@
 .card {
   height: 500px;
   width: 300px;
-  margin-left: 180px !important;
+  margin-top: 50px;
+  margin-left: 120px !important;
   margin-bottom: 15px;
+}
+
+.mainContent .texto {
+  margin-left: auto;
+  margin-right: auto;
+  width: auto;
+  text-align: center;
+  margin-top: 40px;
+  margin-bottom: 35px;
+  height: 160px;
+  background-color: rgba(247, 241, 68, 0.368);
+}
+.mainContent .nosotros {
+  height: 12rem;
+}
+.mainContent .ofertas {
+  background-color: rgba(0, 127, 25, 0.483);
 }
 
 body {
