--- a/scss/_mainProductos.scss
+++ b/scss/_mainProductos.scss
@@ -8,6 +8,26 @@
 .card {
     height: 500px;
     width: 300px;
-    margin-left: 180px !important;
+    margin-top: 50px;
+    margin-left: 120px !important;
     margin-bottom: 15px;
+}
+
+.mainContent {
+    .texto {
+        margin-left: auto;
+        margin-right: auto ;
+        width: auto;
+        text-align: center;
+        margin-top: 40px;
+        margin-bottom: 35px;
+        height: 160px;
+        background-color: rgba(247, 241, 68, 0.368);
+    }
+    .nosotros {
+        height: 12rem;
+    }
+    .ofertas {
+        background-color: rgba(0, 127, 25, 0.483) 
+    }
 }
