--- a/css/estilo.css
+++ b/css/estilo.css
@@ -83,4 +83,18 @@ body {
   box-sizing: border-box;
 }
 
+.aos-animate {
+  text-align: center;
+  margin: auto;
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+
+.noselopierda {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 6rem;
+  width: 550px;
+}
+
 /*# sourceMappingURL=estilo.css.map */
