--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -10,3 +10,16 @@ body {
     box-sizing: border-box;
 }
 
+.aos-animate {
+    text-align: center;
+    margin: auto;
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+}
+
+.noselopierda {
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 6rem;
+    width: 550px;
+}
