--- a/scss/_mainProductos.scss
+++ b/scss/_mainProductos.scss
@@ -31,3 +31,8 @@
         background-color: rgba(0, 127, 25, 0.483) 
     }
 }
+
+.mainContentProductos {
+    text-align: center;
+    margin-top: 20rem;
+}
