--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,4 +1,5 @@
 .footerLinks {
+height: 12rem;
 background-color: rgba(1, 0, 15, 0.692);
 
 
@@ -9,6 +10,17 @@ ul {
     text-decoration-line: none;
     margin: 0;
     padding: 0;
-
+        li {
+            list-style: none;
+            a {
+                text-decoration: none;
+                color: white;
+                &:hover {
+                    color: rgba(0, 255, 187, 0.583);
+                    transition: 0.5s;
+                    
+                }
+            }
+        }
     }
 }
