--- a/css/estilo.css
+++ b/css/estilo.css
@@ -59,6 +59,10 @@
   width: 1024px;
 }
 
+.carousel-item {
+  margin-top: 5px;
+}
+
 .muestraProductos {
   margin-top: 5em;
 }
@@ -95,7 +99,8 @@
 
 .mainContentProductos {
   text-align: center;
-  margin-top: 20rem;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
 }
 
 body {
