--- a/scss/_mainProductos.scss
+++ b/scss/_mainProductos.scss
@@ -34,5 +34,7 @@
 
 .mainContentProductos {
     text-align: center;
-    margin-top: 20rem;
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+    
 }
