--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -8,10 +8,11 @@ ul {
     text-decoration: none;
     text-decoration-style: none;
     text-decoration-line: none;
-    margin: 0;
+    margin-top: 2rem;
     padding: 0;
         li {
             list-style: none;
+            margin-top: 10px;
             a {
                 text-decoration: none;
                 color: white;
