--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -16,7 +16,7 @@
         font-size: 1.1rem;
         position: relative;
         margin-left: 14rem;
-        border: 1.5px;
+        
         .nav-link{
             color: black;
         }
@@ -31,5 +31,6 @@
 }
 
 .fondoPantalla {
+    height: 10rem;
     width: 100%;
 }
