--- a/scss/_mainProductos.scss
+++ b/scss/_mainProductos.scss
@@ -1,5 +1,6 @@
 .muestraProductos{
     margin-top: 5em;
+    margin-right: 0px;
 }
 .card-img-top {
     height: 40%;
@@ -7,15 +8,18 @@
 }
 .card {
     height: 500px;
-    width: 300px;
+    width: 100px;
     margin-top: 50px;
     margin-left: 5px !important;
     margin-right: 5px !important;
     margin-bottom: 15px;
     
     .card-body {
-        width: 500px;
-        padding: 0 , 0 !important;
+        height: 30px;
+        width: auto;
+        margin: 0% !important;
+        padding: 0 !important;
+        
     }
 }
 
@@ -49,4 +53,32 @@
         width: 530px;
         height:20rem;
     }
+}
+.card-text {
+    margin-top: 3rem;
+}
+
+//Grid CARDS
+.card1 {
+    grid-area: card1;
+}
+
+.card2 {
+    grid-area: card2;
+}
+
+.card3 {
+    grid-area: card3;
+}
+
+.card4 {
+    grid-area: card4;
+}
+
+.card5 {
+    grid-area: card5;
+}
+
+.card6 {
+    grid-area: card6;
 }
