--- a/scss/_mainProductos.scss
+++ b/scss/_mainProductos.scss
@@ -58,27 +58,24 @@
     margin-top: 3rem;
 }
 
-//Grid CARDS
-.card1 {
-    grid-area: card1;
+.cardItem {
+    height:auto;
+    margin: 16px;
 }
 
-.card2 {
-    grid-area: card2;
+.card {
+    margin:2px;
+    width: auto;
 }
 
-.card3 {
-    grid-area: card3;
+.mainContentProductos {
+    width: auto;
+    margin-left: 6rem;
+    margin-right: 6rem;
+    margin-bottom: 6rem;
 }
 
-.card4 {
-    grid-area: card4;
-}
-
-.card5 {
-    grid-area: card5;
-}
-
-.card6 {
-    grid-area: card6;
+.card-body {
+    margin-top: 1.5rem;
+    margin-bottom: 3rem;
 }
